# python-cstruct

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  Makefile  README.md  changelog.txt  coverage.sh  index.html  llms.txt  mbr  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  search.html  setup.cfg  setup.py  sitemap.xml  test.sh  utmp
.github/workflows/: release.yml  tests.yml
CODE_OF_CONDUCT/: index.html
api/abstract/: index.html
api/base/: index.html
api/c_expr/: index.html
api/c_parser/: index.html
api/cstruct/: index.html
api/field/: index.html
api/mem_cstruct/: index.html
api/module/: index.html
api/native_types/: index.html
changelog/: index.html
cstruct/: __init__.py  abstract.py  base.py  c_expr.py  c_parser.py  cenum.py  cstruct.py  exceptions.py  field.py  mem_cstruct.py  native_types.py
cstruct/examples/: fdisk.py  who.py
cstruct/tests/: test_cstruct.py
docker/i386/: Dockerfile  Makefile
docs/: changelog.md  index.md
docs/api/: abstract.md  base.md  c_expr.md  c_parser.md  cstruct.md  field.md  mem_cstruct.md  module.md  native_types.md
docs/examples/: dir.md  fdisk.md  flexible_array.md  who.md
examples/: dir.c  dir.py  dir.sh  fdisk.py  fdisk.sh  flexible_array.py  flexible_array.sh  who.py  who.sh
examples/dir/: index.html
examples/fdisk/: index.html
examples/flexible_array/: index.html
examples/who/: index.html
license/: index.html
search/: search_index.json
test/: test_alignment.py  test_cstruct.py  test_define.py  test_memcstruct.py  test_union.py
tests/: test_alignment.py  test_c_expr.py  test_cenum.py  test_cstruct.py  test_cstruct_var.py  test_define.py  test_flexible_array.py  test_get_type.py  test_memcstruct.py  test_native_types.py  test_nested.py  test_padding.py  test_pickle.py  test_typdef.py  test_union.py
