[metadata]
name = cstruct
version = attr: cstruct.__version__
keywords = struct, cstruct, enum, binary, pack, unpack
description = C-style structs for Python
author = Andrea Bonomi
author_email = andrea.bonomi@gmail.com
url = http://github.com/andreax79/python-cstruct
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls =
    Bug Tracker = http://github.com/andreax79/python-cstruct/issues
    Documentation = https://python-cstruct.readthedocs.io/en/latest/
    Source Code = http://github.com/andreax79/python-cstruct

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.6
packages = find:

[options.packages.find]
include = cstruct*
exclude =
    ez_setup
    examples
    tests

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 132
extend-ignore =
    E203
    E401
    W504
    E221
